--- a/views/vvc_certificate_views.xml
+++ b/views/vvc_certificate_views.xml
@@ -1,13 +1,69 @@
 <odoo>
     <data>
-        <record id="vvc_certificate_action" model="ir.actions.act_window">
+        <record id="vvc_certificate_action"
+                model="ir.actions.act_window">
             <field name="name">Certificates</field>
             <field name="res_model">vvc.certificate</field>
             <field name="view_mode">tree,form</field>
         </record>
 
-        <menuitem id="vvc_root_menu" name="VVC" />
+        <record id="seq_serial_number" model="ir.sequence">
+            <field name="name">Test</field>
+            <field name="code">seq_serial_number</field>
+            <field name="prefix">TD</field>
+            <field name="padding">5</field>
+            <field name="company_id" eval="False"/>
+        </record>
+
+        <record id="vvc_certificate_form_view" model="ir.ui.view">
+            <field name="name">Certificate Form View</field>
+            <field name="model">vvc.certificate</field>
+            <field name="arch" type="xml">
+                <form>
+                    <!--                    <header>-->
+                    <!--                        <button name="print_certificate"-->
+                    <!--                                type="object"-->
+                    <!--                                string="Print Certificate"/>-->
+                    <!--                    </header>-->
+                    <sheet>
+                        <group>
+                            <field name="vehicle_type"/>
+                            <field name="certificate_type_id"/>
+                            <field name="traffic_department_id"/>
+                            <field name="customer_ids"/>
+                            <field name="car_model"/>
+                            <field name="brand"/>
+                            <field name="price"/>
+                            <field name="motor_number"/>
+                            <field name="chassis_number"/>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
+
+        <record id="vvc_certificate_tree_view" model="ir.ui.view">
+            <field name="name">Certificate Tree View</field>
+            <field name="model">vvc.certificate</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="serial_number"/>
+                    <field name="vehicle_type"/>
+                    <field name="certificate_type_id"/>
+                    <field name="traffic_department_id"/>
+                    <field name="customer_ids"/>
+                    <field name="car_model"/>
+                    <field name="brand"/>
+                    <field name="price"/>
+                </tree>
+            </field>
+        </record>
+
+        <menuitem id="vvc_root_menu" name="VVC"/>
         <menuitem id="vvc_certificate_menu" name="Certificates"
-                  parent="vvc_root_menu" action="vvc_certificate_action"/>
+                  parent="vvc_root_menu"
+                                    sequence="1"
+action="vvc_certificate_action"/>
     </data>
 </odoo>
